--- a/force-app/main/default/lwc/activateAccounts/activateAccounts.html
+++ b/force-app/main/default/lwc/activateAccounts/activateAccounts.html
@@ -3,7 +3,7 @@
         <lightning-spinner></lightning-spinner>
     </template>
 
-    <c-modal modal-header="Modal Header" modal-tagline="Some tag line">
+    <c-modal modal-header="Modal Header" modal-tagline="Some tag line" modal-save-handler={save}>
         <div slot="modalContent" class="modalContent slds-modal__content slds-p-around_medium">
             <lightning-datatable key-field="id" data={accounts} columns={columns} hide-checkbox-column></lightning-datatable>
         </div>
